feat: add profile photo

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
   <body>
     <div class="resume">
       <div class="sidebar">
-        <div class="sidebar-photo">
+        <div class="sidebar__photo">
           <img
-            src="path/to/your/photo.jpg"
+            src="public/img/img-profile.jpeg"
             alt="Tair Bekishev" />
         </div>
-        <div class=""></div>
         <div class="contact">
           <h1 class="">Tair Bekishev</h1>
-          <h2>Contact Information:</h2>
-          <ul>
+          <h2>Personal Information:</h2>
+          <ul class="sidebar__info">
             <li>
               Email:
               <a href="mailto:bekishevtair@gmail.com">bekishevtair@gmail.com</a>
@@ -41,7 +40,7 @@
               <a
                 href="https://www.linkedin.com/in/tair-bekishev-517281279"
                 target="_blank"
-                >linkedin.com/in/tair-bekishev-517281279</a
+                >linkedin.com/in/tair-bekishev</a
               >
             </li>
             <li>Born: Almaty, Kazakhstan</li>
@@ -187,7 +186,7 @@
         <section class="section__english-language">
           <h2>English Language</h2>
           <ul>
-            <li><strong>Proficiency Level:</strong> B1</li>
+            <li><strong>Proficiency Level:</strong> B2</li>
             <li>
               <strong>Language Practice:</strong> Regularly engage in reading
               technical documentation.
