--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+      content="width=device-width, initial-scale=1.0">
     <title>Tair Bekishev's Resume</title>
     <link
       rel="stylesheet"
-      href="styles.css" />
+      href="styles.css">
   </head>
 
   <body>
@@ -17,7 +17,7 @@
         <div class="sidebar__photo">
           <img
             src="public/img/img-profile.jpeg"
-            alt="Tair Bekishev" />
+            alt="Tair Bekishev">
         </div>
         <div class="contact">
           <h1 class="">Tair Bekishev</h1>
