--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0">
+  </meta>
     <title>Tair Bekishev's Resume</title>
     <link
       rel="stylesheet"
       href="styles.css">
+</link>
   </head>
 
   <body>
@@ -18,6 +20,7 @@
           <img
             src="public/img/img-profile.jpeg"
             alt="Tair Bekishev">
+        </img>
         </div>
         <div class="contact">
           <h1 class="">Tair Bekishev</h1>
