--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0">
-  </meta>
+      content="width=device-width, initial-scale=1.0" />
     <title>Tair Bekishev's Resume</title>
     <link
       rel="stylesheet"
-      href="styles.css">
-</link>
+      href="styles.css" />
   </head>
 
   <body>
@@ -19,8 +17,7 @@
         <div class="sidebar__photo">
           <img
             src="public/img/img-profile.jpeg"
-            alt="Tair Bekishev">
-        </img>
+            alt="Tair Bekishev" />
         </div>
         <div class="contact">
           <h1 class="">Tair Bekishev</h1>
