feat: minor changes on html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tair Bekishev's Resume</title>
     <link
       rel="stylesheet"
       href="styles.css">
+    <link rel="icon" href="public/img/img-profile.jpeg">
   </head>
 
   <body>
